samples/_failures_safe/1761186016_560341_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ff0a083.c: In function ‘parser_init’:
./samples/SAFE/__tmp_9ff0a083.c:152:5: error: expected expression at end of input
  152 |     parser->current_token =
      |     ^~~~~~
./samples/SAFE/__tmp_9ff0a083.c:152:5: error: expected declaration or statement at end of input
